# pinocchio-kinematics-lite

./: .gitignore  MANIFEST.in  README.md  README_zh-CN.md  pyproject.toml  requirements.txt
benchmarks/: benchmark_ik.py  benchmark_trajectory_continuity.py
docs/: CUSTOM_URDF.md  DEBUG_AND_BENCHMARK.md  DEPENDENCY_AUDIT.md
examples/: custom_urdf_demo.py  debug_single_target.py  quick_start_nero.py
nero/: __init__.py
nero/kinematics/: __init__.py  debug_tools.py
nero/kinematics/nero_kinematics/nero_ik/: ik_solver.py
nero/teleop/: nero_teleop_config.py
nero/teleop/interface/: nero_interface_server.py
nero/teleop/tests/notebooks/: interface_client_test.ipynb
nero/teleop/tests/py/: servo_p_test.py
nero/tests/: test_com.py  test_com_gripper.py  test_gripper.py  test_nero_pbt.py  test_placo.py  test_placo_viz.py  test_pos_flw_ik.py
src/pinocchio_kinematics_lite/: __init__.py  fk.py  ik.py  jacobian.py  kinematics.py  limits.py  resources.py  transforms.py
src/pinocchio_kinematics_lite/profiles/: __init__.py  nero.py  registry.py
tests/: conftest.py  test_custom_urdf_loading.py  test_fk_ik_consistency.py  test_jacobian_consistency.py  test_joint_limits.py  test_nero_profile.py  test_no_vendor_dependency.py  test_robot_profile_registry.py
