[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinocchio-kinematics-lite"
version = "0.1.0"
description = "A lightweight Pinocchio-based FK/IK/Jacobian library for URDF robot arms, with built-in robot profiles and custom URDF support."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Key-Zzs" }
]
license = { text = "MIT License" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/Key-Zzs/pinocchio-kinematics-lite"
Repository = "https://github.com/Key-Zzs/pinocchio-kinematics-lite"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pinocchio_kinematics_lite = [
    "assets/**/*.urdf",
    "assets/**/*.stl",
    "assets/**/*.STL",
    "assets/**/*.dae",
]

[tool.setuptools]
include-package-data = true
